[project]
name = "nldate"
version = "0.1.0"
description = "Natural-language date parser"
requires-python = ">=3.8"
dependencies = ["python-dateutil>=2.8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.15.12",
    "types-python-dateutil>=2.9.0.20241206",
]
